<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BackupAndRestore-Point</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_sdcard">No Sdcard</string>
    <string name="sms_backup">SMS Backup</string>
    <string name="contacts_backup">Contacts Backup</string>
    <string name="call_logs_backup">Call Logs Backup</string>
    <string name="calendars_backup">Calendars Backup</string>
    <string name="bookmarks_backup">Bookmarks Backup</string>
    <string name="date_created">date created</string>
    <string name="name_for_backup_file">Please enter a name for backup file...</string>
    <string name="_storage_sdcard0_smscontactsbackups_sms">/storage/sdcard0/smsContactsBackups/sms</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="last_backup">Last backup</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="view_backups">View Backups</string>
    <string name="send_to_email">Send To Email</string>
    <string name="delete_backups">Delete Backups</string>
    <string name="delete_all_bookmarks">Delete All Bookmarks</string>
    <string name="bookmarks_backups">Bookmarks Backups</string>
    <string name="call_logs_backups">Call Logs Backups</string>
    <string name="call_logs">Call Logs</string>
    <string name="delete_all_call_logs">Delete All Call Logs</string>
    <string name="contacts_backups">Contacts Backups</string>
    <string name="contacts">Contacts</string>
    <string name="delete_all_contacts">Delete All Contacts</string>
    <string name="sms_backups">SMS Backups</string>
    <string name="delete_all_messages">Delete All Messages</string>
    <string name="free">free</string>
    <string name="storage_used">Storage Used</string>
    <string name="sdcard_is_not_accessible">SdCard is not accessible</string>
    <string name="insufficient_space_on_sdcard">There is insufficient space on the Sdcard</string>
    <string name="never_backup">Never Backup</string>
    <string name="send_to_email_backup">Backup completed successfully!</string>
    <string name="restore_completed_successfully_">Restore completed successfully!</string>
    <string name="backuping_files_please_wait_">Backuping Files. Please wait...</string>
    <string name="send_mail">Send mail...</string>
    <string name="delete_files">Delete Files</string>
    <string name="OK">Ok</string>
    <string name="backup_files">Backup Files</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleted_successfully_">Deleted Successfully!</string>
    <string name="are_you_sure_you_wan_to_delete_all_the_bookmarks_on_the_phone_">Are you sure you wan to delete all the Bookmarks on the phone?</string>
    <string name="deleting_all_bookmarks_">Deleting All Bookmarks...</string>
    <string name="bookmarks_deleted_successfully_">Bookmarks Deleted Successfully!</string>
    <string name="restoring_backups_">Restoring Backups...</string>
    <string name="view_bookmarks">View Bookmarks</string>
    <string name="there_was_a_problem_loading_the_application_">"There was a problem loading the application: "</string>
    <string name="are_you_sure_you_wan_to_delete_all_the_call_logs_on_the_phone_">Are you sure you wan to delete all the Call Logs on the phone?</string>
    <string name="panic">Panic</string>
    <string name="deleting_all_calllogs_">Deleting All CallLogs...</string>
    <string name="deleting_all_call_logs_">Deleting All Call Logs...</string>
    <string name="call_logs_deleted_successfully_">Call Logs Deleted Successfully!</string>
    <string name="not_now">Not Now</string>
    <string name="send">Send</string>
    <string name="view_messages">View Messages</string>
    <string name="deleting_all_sms_">Deleting All SMS...</string>
    <string name="exporting_file_please_wait_">Exporting file. Please wait...</string>
    <string name="are_you_sure_you_wan_to_delete_all_the_contacts_on_the_phone_">Are you sure you wan to delete all the Contacts on the phone?</string>
    <string name="deleting_all_contacts_">Deleting All Contacts...</string>
    <string name="contacts_deleted_successfully_">Contacts Deleted Successfully!</string>
    <string name="send_mail_">Send mail...</string>
    <string name="used">used</string>
</resources>
