<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/dd" android:padding="2.0dip" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="wrap_content">

        <TextView
            android:id="@id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5.0dip"
            android:shadowColor="#ff000000"
            android:shadowDx="3.0"
            android:shadowDy="3.0"
            android:gravity="center"
            android:shadowRadius="6.0"
            android:drawableLeft="@drawable/contact_icon"
            android:text="@string/contacts_backups"
            android:textColor="#ffffffff"
            android:textSize="22.0dip" />

    </RelativeLayout>
    <RelativeLayout android:layout_below="@+id/dd" android:background="@drawable/top_bar_every_screen" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="#ffff6815" android:id="@id/tvContacts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contacts" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="2.0" android:layout_centerVertical="true" />
        <TextView android:textColor="#ffff6815" android:id="@id/tvLastBackup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/last_backup" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="2.0" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
        
    <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnBackup" android:background="@drawable/button_selector" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/backup" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="4.0" />
    <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnRestore" android:background="@drawable/button_selector" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/restore" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="4.0" />
    <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnViewBackup" android:background="@drawable/button_selector" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/view_backups" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="4.0" />
    <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnSendToEmail" android:background="@drawable/button_selector" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/send_to_email" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="4.0" />
    <Button android:textSize="20.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnDeleteAllContacts" android:background="@drawable/button_selector" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/delete_all_contacts" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="4.0" />
    </LinearLayout>
    
    <com.startapp.android.publish.banner.Banner
        android:id="@+id/startAppBanner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>