<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    
<RelativeLayout android:id="@+id/rrrr" android:background="@drawable/top_bar" android:layout_width="fill_parent" android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:drawableLeft="@drawable/main_icon"
            android:textColor="#ffffffff"
            android:textSize="22.0dip" />

    </RelativeLayout>
    <FrameLayout android:layout_below="@+id/rrrr" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/llStorageBar" android:background="@drawable/top_bar_every_screen" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/vProgress" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="20.0dip" />
        </LinearLayout>
        <RelativeLayout android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="#ffff6815" android:id="@id/tvUsedSpace" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_sdcard" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="4.0" />
            <TextView android:textColor="#ffff6815" android:id="@id/tvFreeSpace" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="2.0" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </FrameLayout>
    
<com.startapp.android.publish.banner.Banner
        android:id="@+id/startAppBanner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical" >
        
    <Button 
        android:textSize="20.0dip" 
        android:textColor="#ffffffff" 
        android:gravity="center" 
        android:id="@id/btnSMSBackup" 
        android:background="@drawable/button_selector" 
        android:layout_width="200dp" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="25.0dip" 
        android:text="@string/sms_backup" 
        android:shadowColor="#ff000000" 
        android:shadowDx="2.0" 
        android:shadowDy="2.0" 
        android:shadowRadius="4.0" />
    <Button 
        android:textSize="20.0dip" 
        android:textColor="#ffffffff" 
        android:gravity="center" 
        android:id="@id/btnContactsBackup" 
        android:background="@drawable/button_selector" 
        android:layout_width="200dp" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="15.0dip" 
        android:text="@string/contacts_backup" 
        android:shadowColor="#ff000000" 
        android:shadowDx="2.0" 
        android:shadowDy="2.0" 
        android:shadowRadius="4.0" />
    <Button 
        android:textSize="20.0dip" 
        android:textColor="#ffffffff" 
        android:gravity="center" 
        android:id="@id/btnCallLogsBackup" 
        android:background="@drawable/button_selector" 
        android:layout_width="200dp"
        android:layout_height="wrap_content" 
        android:layout_marginTop="15.0dip" 
        android:text="@string/call_logs_backup" 
        android:shadowColor="#ff000000" 
        android:shadowDx="2.0" 
        android:shadowDy="2.0" 
        android:shadowRadius="4.0" />
    <Button 
        android:textSize="20.0dip" 
        android:textColor="#ffffffff" 
        android:gravity="center" 
        android:id="@id/btnBookmarksBackup" 
        android:background="@drawable/button_selector" 
        android:layout_width="200dp" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="15.0dip" 
        android:text="@string/bookmarks_backup" 
        android:shadowColor="#ff000000" 
        android:shadowDx="2.0" 
        android:shadowDy="2.0" 
        android:shadowRadius="4.0" />
	<Button 
	    android:textSize="20.0dip" 
	    android:textColor="#ffffffff" 
	    android:gravity="center" 
	    android:id="@+id/btnappBackup" 
	    android:background="@drawable/button_selector" 
	    android:layout_width="200dp" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="15.0dip" 
	    android:text="App Backup" 
	    android:shadowColor="#ff000000" 
	    android:shadowDx="2.0" 
	    android:shadowDy="2.0" 
	    android:shadowRadius="4.0" />
</LinearLayout>

</RelativeLayout>